添加应用图标 修复桌面端无法正确展示 WebView 内容 优化主题模式